Polish help output and improve server compatibility